# ai-engineering-system

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  release-please-config.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
changelog/: index.html
claude/: CLAUDE.md
code-architectures/: clean-architecture.md  domain-driven-design.md  hexagonal-architecture.md  layered-architecture.md
codex/: AGENTS.md
contributing/: index.html
cookbook/: index.html
docs/: cookbook.md  examples.md  governance.md  index.md  quickstart.md  requirements.txt
examples/: index.html
examples/hello-todo-rust/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
examples/hello-todo-rust/.ai/workflow/: active-task.md  project-context.md  workflow-state.md
examples/hello-todo-rust/.github/workflows/: ci.yml
examples/hello-todo-rust/docs/architecture/: system-design.md  tech-stack.md
examples/hello-todo-rust/docs/architecture/decisions/: 0001-rust-axum-hexagonal.md
examples/hello-todo-rust/docs/maintenance/: known-issues.md  runbook.md
examples/hello-todo-rust/docs/plan/: implementation-plan.md  milestones.md  tasks.md
examples/hello-todo-rust/docs/release/: deployment-plan.md  go-live-checklist.md  rollback-plan.md
examples/hello-todo-rust/docs/requirements/: acceptance-criteria.md  prd.md  project-brief.md  user-stories.md
examples/hello-todo-rust/docs/specs/: api-spec.md  data-model.md  functional-spec.md
examples/hello-todo-rust/docs/tests/: manual-test-checklist.md  regression-checklist.md  test-plan.md
examples/hello-todo-rust/src/: main.rs
examples/hello-todo-rust/src/adapters/inbound/http/: handlers.rs  routes.rs
examples/hello-todo-rust/src/adapters/outbound/memory/: store.rs
examples/hello-todo-rust/src/core/: health.rs
examples/hello-todo-rust/src/core/todo/: entity.rs  mod.rs  repository.rs  service.rs
examples/hello-todo-rust/src/ports/: inbound.rs  outbound.rs
governance/: index.html
migrations/: index.html
project-files/: CHANGELOG.md  CONTRIBUTING.md  README.md  core-project-files.md  (+1 more)
templates/skeletons/fastapi-layered/: Makefile  README.md  pyproject.toml
templates/skeletons/fastapi-layered/src/my_service/: __init__.py  main.py
templates/skeletons/fastapi-layered/src/my_service/api/: health.py
templates/skeletons/fastapi-layered/src/my_service/config/: settings.py
templates/skeletons/fastapi-layered/src/my_service/services/: health.py
templates/skeletons/fastapi-layered/tests/: test_health.py
templates/skeletons/rust-axum-hexagonal/: Cargo.toml  Makefile  README.md
templates/skeletons/rust-axum-hexagonal/src/: main.rs
templates/skeletons/rust-axum-hexagonal/src/adapters/inbound/http/: handlers.rs  routes.rs
templates/skeletons/rust-axum-hexagonal/src/ports/: inbound.rs  outbound.rs
(+610 files in other folders)
