[package]
name = "hello-todo-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "hello_todo_rust"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.45", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
