[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-service"
version = "0.1.0"
description = "A FastAPI service using layered architecture."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "TBD" }]
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.47.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.13",
  "mypy>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_service"]

[tool.ruff]
extend = "ruff.toml"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
show_error_codes = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: integration tests that hit external services",
]
